Fixed some broken js refs for styling and javascript.  Part of the app refactoring.

--- a/MyCompany/MyCompany.csproj
+++ b/MyCompany/MyCompany.csproj
@@ -285,6 +285,7 @@
     <Content Include="site\Views\Contact.cshtml" />
     <Content Include="site\Views\About.cshtml" />
     <Content Include="site\Views\News.cshtml" />
+    <Content Include="site\Views\Privacy.cshtml" />
     <None Include="_references.js" />
   </ItemGroup>
   <ItemGroup>
