--- a/MyCompany/Web.config
+++ b/MyCompany/Web.config
@@ -8,6 +8,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ListenFirst.mdf;Initial Catalog=ListenFirst;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <!--<configSections>
     <sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
       <section name="host" type="System.Web.WebPages.Razor.Configuration.HostSection, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
@@ -63,7 +67,7 @@
   </system.web>
   <system.webServer>
     <modules>
-      <remove name="FormsAuthentication"/>
+      <remove name="FormsAuthentication" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
     
