Added Google Login

--- a/MyCompany/Web.config
+++ b/MyCompany/Web.config
@@ -37,6 +37,11 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    
+    <!--mjh: ASPSMS Settings for Auth stuff-->
+    <add key="SMSAccountIdentification" value="VNP3GEMHHF8S" />
+    <add key="SMSAccountPassword" value="p4$$w0rd" />
+    <add key="SMSAccountFrom" value="ListenFirst" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -136,4 +141,28 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="ASPSMSX2Soap">
+          <security mode="Transport" />
+        </binding>
+        <binding name="ASPSMSX2Soap1" />
+      </basicHttpBinding>
+      <customBinding>
+        <binding name="ASPSMSX2Soap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpsTransport />
+        </binding>
+      </customBinding>
+    </bindings>
+    <client>
+      <endpoint address="https://webservice.aspsms.com/aspsmsx2.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ASPSMSX2Soap"
+        contract="ASPSMSX2.ASPSMSX2Soap" name="ASPSMSX2Soap" />
+      <endpoint address="https://webservice.aspsms.com/aspsmsx2.asmx"
+        binding="customBinding" bindingConfiguration="ASPSMSX2Soap12"
+        contract="ASPSMSX2.ASPSMSX2Soap" name="ASPSMSX2Soap12" />
+    </client>
+  </system.serviceModel>
 </configuration>
