--- a/MyCompany/Web.config
+++ b/MyCompany/Web.config
@@ -19,52 +19,54 @@
   <rewriter>
     <!-- Handle Standard Logins -->
     <if url="^((?!forum).)*$">
-      <rewrite url="^~/(.+?)?login?\.aspx(\?(.+))?$" to="~/forum/forum.aspx?g=login&amp;$2" processing="stop" />
+      <!--<rewrite url="^~/(.+?)?login?\.aspx(\?(.+))?$" to="~/forum/forum.aspx?g=login&amp;$2" processing="stop" />-->
     </if>
     <rewrite url="^~/forum/forum\.aspx\?g=login(&amp;(.+))?$" to="~/forum/forum.aspx?g=login&amp;$1" processing="stop" />
     <!-- Standard URL Rewriting Format -->
-    <rewrite url="^~/(.+?)?yaf_login?\.aspx(\?(.+))?$" to="~/$1Forum.aspx?g=login&amp;$5" processing="stop" />
-    <rewrite url="^~/(.+?)?yaf_info?\.aspx\?i=([0-9]+?)&amp;url\=(.+)$" to="~/$1Forum.aspx?g=info&amp;i=$2&amp;url=$3" processing="stop" />
-    <rewrite url="^~/(.+)?yaf_topics([0-9]+)p([0-9]+)(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/$1Forum.aspx?g=topics&amp;f=$2&amp;p=$3&amp;$7" processing="stop" />
-    <rewrite url="^~/(.+)?yaf_topics([0-9]+)(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/$1Forum.aspx?g=topics&amp;f=$2&amp;$6" processing="stop" />
-    <rewrite url="^~/(.+)?yaf_forum([0-9]+)(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/$1Forum.aspx?g=forum&amp;c=$2&amp;$6" processing="stop" />
-    <rewrite url="^~/(.+)?yaf_postst([0-9]+)find([-a-z]+)(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/$1Forum.aspx?g=posts&amp;t=$2&amp;find=$3&amp;$7" processing="stop" />
-    <rewrite url="^~/(.+)?yaf_postst([0-9]+)p([0-9]+)(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/$1Forum.aspx?g=posts&amp;t=$2&amp;p=$3&amp;$7" processing="stop" />
-    <rewrite url="^~/(.+)?yaf_postst([0-9]+)(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/$1Forum.aspx?g=posts&amp;t=$2&amp;$6" processing="stop" />
-    <rewrite url="^~/(.+)?yaf_postsm([0-9]+)find([-a-z]+)(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/$1Forum.aspx?g=posts&amp;m=$2&amp;find=$3&amp;$7" processing="stop" />
-    <rewrite url="^~/(.+)?yaf_postsm([0-9]+)(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/$1Forum.aspx?g=posts&amp;m=$2&amp;$6" processing="stop" />
-    <rewrite url="^~/(.+)?yaf_profile([0-9]+)(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/$1Forum.aspx?g=profile&amp;u=$2&amp;$6" processing="stop" />
-    <rewrite url="^~/(.+)?yaf_rsstopicft([0-9]+)t([0-9]+)(_([-a-z0-9]+))(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/$1Forum.aspx?g=rsstopic&amp;ft=$2&amp;t=$3&amp;$9" processing="stop" />
-    <rewrite url="^~/(.+)?yaf_rsstopicft([0-9]+)f([0-9]+)(_([-a-z0-9]+))(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/$1Forum.aspx?g=rsstopic&amp;ft=$2&amp;f=$3&amp;$9" processing="stop" />
-    <rewrite url="^~/(.+)?yaf_rsstopicft([0-9]+)(_([-a-z0-9]+))(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/$1Forum.aspx?g=rsstopic&amp;ft=$2&amp;$8" processing="stop" />
-    <rewrite url="^~/(.+)?yaf_([-0-9a-z_]+?)\.aspx\?(.+)?$" to="~/$1Forum.aspx?g=$2&amp;$3" processing="stop" />
-    <rewrite url="^~/(.+)?yaf_([-0-9a-z_]+?)\.aspx$" to="~/$1Forum.aspx?g=$2" processing="stop" />
+    <rewrite url="^~/(.+?)?yaf_login?\.aspx(\?(.+))?$" to="~/forum/Mattforum.aspx?g=login&amp;$5" processing="stop" />
+    <rewrite url="^~/(.+?)?yaf_info?\.aspx\?i=([0-9]+?)&amp;url\=(.+)$" to="~/forum/Mattforum.aspx?g=info&amp;i=$2&amp;url=$3" processing="stop" />
+    <rewrite url="^~/(.+)?yaf_topics([0-9]+)p([0-9]+)(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/forum/Mattforum.aspx?g=topics&amp;f=$2&amp;p=$3&amp;$7" processing="stop" />
+    <rewrite url="^~/(.+)?yaf_topics([0-9]+)(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/forum/Mattforum.aspx?g=topics&amp;f=$2&amp;$6" processing="stop" />
+    <rewrite url="^~/(.+)?yaf_forum([0-9]+)(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/forum/Mattforum.aspx?g=forum&amp;c=$2&amp;$6" processing="stop" />
+    <rewrite url="^~/(.+)?yaf_postst([0-9]+)find([-a-z]+)(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/forum/Mattforum.aspx?g=posts&amp;t=$2&amp;find=$3&amp;$7" processing="stop" />
+    <rewrite url="^~/(.+)?yaf_postst([0-9]+)p([0-9]+)(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/forum/Mattforum.aspx?g=posts&amp;t=$2&amp;p=$3&amp;$7" processing="stop" />
+    <rewrite url="^~/(.+)?yaf_postst([0-9]+)(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/forum/Mattforum.aspx?g=posts&amp;t=$2&amp;$6" processing="stop" />
+    <rewrite url="^~/(.+)?yaf_postsm([0-9]+)find([-a-z]+)(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/forum/Mattforum.aspx?g=posts&amp;m=$2&amp;find=$3&amp;$7" processing="stop" />
+    <rewrite url="^~/(.+)?yaf_postsm([0-9]+)(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/forum/Mattforum.aspx?g=posts&amp;m=$2&amp;$6" processing="stop" />
+    <rewrite url="^~/(.+)?yaf_profile([0-9]+)(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/forum/Mattforum.aspx?g=profile&amp;u=$2&amp;$6" processing="stop" />
+    <rewrite url="^~/(.+)?yaf_rsstopicft([0-9]+)t([0-9]+)(_([-a-z0-9]+))(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/forum/Mattforum.aspx?g=rsstopic&amp;ft=$2&amp;t=$3&amp;$9" processing="stop" />
+    <rewrite url="^~/(.+)?yaf_rsstopicft([0-9]+)f([0-9]+)(_([-a-z0-9]+))(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/forum/Mattforum.aspx?g=rsstopic&amp;ft=$2&amp;f=$3&amp;$9" processing="stop" />
+    <rewrite url="^~/(.+)?yaf_rsstopicft([0-9]+)(_([-a-z0-9]+))(_([-a-z0-9]+))?\.aspx(\?(.+))?$" to="~/forum/Mattforum.aspx?g=rsstopic&amp;ft=$2&amp;$8" processing="stop" />
+    <rewrite url="^~/(.+)?yaf_([-0-9a-z_]+?)\.aspx\?(.+)?$" to="~/forum/Mattforum.aspx?g=$2&amp;$3" processing="stop" />
+    <rewrite url="^~/(.+)?yaf_([-0-9a-z_]+?)\.aspx$" to="~/forum/Mattforum.aspx?g=$2" processing="stop" />
     <!-- Advanced URL Rewriting Format -->
     <rewrite url="^~/(.+?)?error.aspx$" to="~/$1error.aspx" processing="stop" />
     <rewrite url="^~/(.+?)?install/default.aspx?(\?(.+))?$" to="~/$1install/default.aspx?$2" processing="stop" />
     <rewrite url="^~/(.+?)?install/$" to="~/$1install/default.aspx?$2" processing="stop" />
-    <rewrite url="^~/(.+?)?login?(\?(.+))?$" to="~/$1forum.aspx?g=login&amp;$5" processing="stop" />
-    <rewrite url="^~/(.+?)?info?\?i=([0-9]+?)&amp;url\=(.+)$" to="~/$1forum.aspx?g=info&amp;i=$2&amp;url=$3" processing="stop" />
-    <rewrite url="^~/(.+)?topics/([0-9]+)p([0-9]+)-(([-a-z0-9]+))?(\?(.+))?$" to="~/$1forum.aspx?g=topics&amp;f=$2&amp;p=$3&amp;$7" processing="stop" />
-    <rewrite url="^~/(.+)?topics/([0-9]+)-(([-a-z0-9]+))?(\?(.+))?$" to="~/$1forum.aspx?g=topics&amp;f=$2&amp;$6" processing="stop" />
-    <rewrite url="^~/(.+)?/category/([0-9]+)-(([-a-z0-9]+))?(\?(.+))?$" to="~/$1/forum.aspx?g=forum&amp;c=$2&amp;$6" processing="stop" />
-    <rewrite url="^~/(.+)?posts/t([0-9]+)find([-a-z]+)-(([-a-z0-9]+))?(\?(.+))?$" to="~/$1forum.aspx?g=posts&amp;t=$2&amp;find=$3&amp;$7" processing="stop" />
-    <rewrite url="^~/(.+)?posts/t([0-9]+)p([0-9]+)-(([-a-z0-9]+))?(\?(.+))?$" to="~/$1forum.aspx?g=posts&amp;t=$2&amp;p=$3&amp;$7" processing="stop" />
-    <rewrite url="^~/(.+)?posts/t([0-9]+)-(([-a-z0-9]+))?(\?(.+))?$" to="~/$1forum.aspx?g=posts&amp;t=$2&amp;$6" processing="stop" />
-    <rewrite url="^~/(.+)?posts/t([0-9]+)?(\?(.+))?$" to="~/$1forum.aspx?g=posts&amp;t=$2&amp;$5" processing="stop" />
-    <rewrite url="^~/(.+)?posts/m([0-9]+)find([-a-z]+)-(([-a-z0-9]+))?(\?(.+))?$" to="~/$1forum.aspx?g=posts&amp;m=$2&amp;find=$3&amp;$7" processing="stop" />
-    <rewrite url="^~/(.+)?posts/m([0-9]+)-(([-a-z0-9]+))?(\?(.+))?$" to="~/$1forum.aspx?g=posts&amp;m=$2&amp;$6" processing="stop" />
-    <rewrite url="^~/(.+)?profile/([0-9]+)-(([-a-z0-9]+))?(\?(.+))?$" to="~/$1forum.aspx?g=profile&amp;u=$2&amp;$6" processing="stop" />
-    <rewrite url="^~/(.+)?admin/([-a-z0-9]+)?/([-a-z0-9]+)?(\?(.+))?$" to="~/$1forum.aspx?g=admin_$2_$3&amp;$5" processing="stop" />
-    <rewrite url="^~/(.+)?admin/([-a-z0-9]+)?(\?(.+))?$" to="~/$1forum.aspx?g=admin_$2&amp;$4" processing="stop" />
-    <rewrite url="^~/(.+)?rsstopic/ft([0-9]+)t([0-9]+)-(([-a-z0-9]+))(_([-a-z0-9]+))?(\?(.+))?$" to="~/$1forum.aspx?g=rsstopic&amp;ft=$2&amp;t=$3&amp;pg=$5&amp;$7" processing="stop" />
-    <rewrite url="^~/(.+)?rsstopic/ft([0-9]+)f([0-9]+)-(([-a-z0-9]+))(_([-a-z0-9]+))?(\?(.+))?$" to="~/$1forum.aspx?g=rsstopic&amp;ft=$2&amp;f=$3&amp;pg=$5&amp;$7" processing="stop" />
-    <rewrite url="^~/(.+)?rsstopic/ft([0-9]+)-(([-a-z0-9]+))_([-a-z0-9]+)(\?(.+))?$" to="~/$1forum.aspx?g=rsstopic&amp;ft=$2&amp;pg=$3&amp;$7" processing="stop" />
-    <rewrite url="^~/(.+)?rsstopic/ft([0-9]+)-(([-a-z0-9]+))-([-a-z0-9]+)(\?(.+))?$" to="~/$1forum.aspx?g=rsstopic&amp;ft=$2&amp;pg=$3&amp;$7" processing="stop" />
+    <!--<rewrite url="^~/(.+?)?login?(\?(.+))?$" to="~/Mattforum.aspx?g=login&amp;$5" processing="stop" />-->
+    <rewrite url="^~/(.+?)?info?\?i=([0-9]+?)&amp;url\=(.+)$" to="~/forum/Mattforum.aspx?g=info&amp;i=$2&amp;url=$3" processing="stop" />
+    <rewrite url="^~/(.+)?topics/([0-9]+)p([0-9]+)-(([-a-z0-9]+))?(\?(.+))?$" to="~/forum/Mattforum.aspx?g=topics&amp;f=$2&amp;p=$3&amp;$7" processing="stop" />
+    
+    <rewrite url="^~/(.+)?topics/([0-9]+)-(([-a-z0-9]+))?(\?(.+))?$" to="~/forum/Mattforum.aspx?g=topics&amp;f=$2&amp;$6" processing="stop" />
+    
+    <rewrite url="^~/(.+)?/category/([0-9]+)-(([-a-z0-9]+))?(\?(.+))?$" to="~/forum/Mattforum.aspx?g=forum&amp;c=$2&amp;$6" processing="stop" />
+    <rewrite url="^~/(.+)?posts/t([0-9]+)find([-a-z]+)-(([-a-z0-9]+))?(\?(.+))?$" to="~/forum/Mattforum.aspx?g=posts&amp;t=$2&amp;find=$3&amp;$7" processing="stop" />
+    <rewrite url="^~/(.+)?posts/t([0-9]+)p([0-9]+)-(([-a-z0-9]+))?(\?(.+))?$" to="~/forum/Mattforum.aspx?g=posts&amp;t=$2&amp;p=$3&amp;$7" processing="stop" />
+    <rewrite url="^~/(.+)?posts/t([0-9]+)-(([-a-z0-9]+))?(\?(.+))?$" to="~/forum/Mattforum.aspx?g=posts&amp;t=$2&amp;$6" processing="stop" />
+    <rewrite url="^~/(.+)?posts/t([0-9]+)?(\?(.+))?$" to="~/forum/Mattforum.aspx?g=posts&amp;t=$2&amp;$5" processing="stop" />
+    <rewrite url="^~/(.+)?posts/m([0-9]+)find([-a-z]+)-(([-a-z0-9]+))?(\?(.+))?$" to="~/forum/Mattforum.aspx?g=posts&amp;m=$2&amp;find=$3&amp;$7" processing="stop" />
+    <rewrite url="^~/(.+)?posts/m([0-9]+)-(([-a-z0-9]+))?(\?(.+))?$" to="~/forum/Mattforum.aspx?g=posts&amp;m=$2&amp;$6" processing="stop" />
+    <rewrite url="^~/(.+)?profile/([0-9]+)-(([-a-z0-9]+))?(\?(.+))?$" to="~/forum/Mattforum.aspx?g=profile&amp;u=$2&amp;$6" processing="stop" />
+    <rewrite url="^~/(.+)?admin/([-a-z0-9]+)?/([-a-z0-9]+)?(\?(.+))?$" to="~/forum/Mattforum.aspx?g=admin_$2_$3&amp;$5" processing="stop" />
+    <rewrite url="^~/(.+)?admin/([-a-z0-9]+)?(\?(.+))?$" to="~/forum/Mattforum.aspx?g=admin_$2&amp;$4" processing="stop" />
+    <rewrite url="^~/(.+)?rsstopic/ft([0-9]+)t([0-9]+)-(([-a-z0-9]+))(_([-a-z0-9]+))?(\?(.+))?$" to="~/forum/Mattforum.aspx?g=rsstopic&amp;ft=$2&amp;t=$3&amp;pg=$5&amp;$7" processing="stop" />
+    <rewrite url="^~/(.+)?rsstopic/ft([0-9]+)f([0-9]+)-(([-a-z0-9]+))(_([-a-z0-9]+))?(\?(.+))?$" to="~/forum/Mattforum.aspx?g=rsstopic&amp;ft=$2&amp;f=$3&amp;pg=$5&amp;$7" processing="stop" />
+    <rewrite url="^~/(.+)?rsstopic/ft([0-9]+)-(([-a-z0-9]+))_([-a-z0-9]+)(\?(.+))?$" to="~/forum/Mattforum.aspx?g=rsstopic&amp;ft=$2&amp;pg=$3&amp;$7" processing="stop" />
+    <rewrite url="^~/(.+)?rsstopic/ft([0-9]+)-(([-a-z0-9]+))-([-a-z0-9]+)(\?(.+))?$" to="~/forum/Mattforum.aspx?g=rsstopic&amp;ft=$2&amp;pg=$3&amp;$7" processing="stop" />
     <if url="^((?!\.ashx|\.asmx|\.axd|\.gif|\.png|\.jpg|\.ico|\.pdf|\.css|\.js|install|error|auth\.aspx|default\.aspx|popup\.aspx|advanced\.aspx|digest\.aspx).)*$">
-      <rewrite url="^~/forum/(.+)?\?(.+)?$" to="~/forum/forum.aspx?g=$1&amp;$2" processing="stop" />
-      <rewrite url="^~/forum/(.+)?$" to="~/forum/forum.aspx?g=$1" processing="stop" />
-      <rewrite url="^~/forum/(.+)?\.aspx$" to="~/forum/forum.aspx?g=$1" processing="stop" />
+      <rewrite url="^~/forum/(.+)?\?(.+)?$" to="~/forum/Mattforum.aspx?g=$1&amp;$2" processing="stop" />
+      <rewrite url="^~/forum/(.+)?$" to="~/forum/Mattforum.aspx?g=$1" processing="stop" />
+      <rewrite url="^~/forum/(.+)?\.aspx$" to="~/forum/Mattforum.aspx?g=$1" processing="stop" />
     </if>
   </rewriter>
 
@@ -86,7 +88,7 @@
     <!--mjh YAF AppSettings Begin-->
     <add key="YAF.ConfigPassword" value="pass" />
 	  <add key="YAF.BoardID" value="1" />
-    <add key="YAF.EnableURLRewriting" value="true" />
+    <add key="YAF.EnableURLRewriting" value="false" />
     <add key="YAF.URLRewritingMode" value="Unicode" />
     <add key="YAF.UseSMTPSSL" value="false" />  
     <add key="YAF.DatabaseObjectQualifier" value="yaf_" />
@@ -180,7 +182,7 @@
 
     <profile enabled="true" defaultProvider="YafProfileProvider" inherits="YAF.Utils.YafUserProfile">
       <providers>
-        <clear/>
+        <clear />
         <add connectionStringName="yafnet" applicationName="YetAnotherForum" name="YafProfileProvider" type="YAF.Providers.Profile.YafProfileProvider" />
       </providers>
     </profile>
@@ -243,24 +245,12 @@
         <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <system.codedom>
-    <compilers>
-      <compiler language="c#;cs;csharp" 
-                extension=".cs" 
-                type="Microsoft.CSharp.CSharpCodeProvider, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" 
-                warningLevel="4" 
-                compilerOptions="/langversion:5 /nowarn:1659;1699;1701" >
-        <providerOption name="CompilerVersion" value="v4.0" />
-        <providerOption name="WarnAsError" value="false"></providerOption>
-      </compiler>
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.VisualBasic.VBCodeProvider, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot;optionInfer">
-        <providerOption name="CompilerVersion" value="v4.0" />
-        
-      </compiler>
-    </compilers>
-  </system.codedom>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -291,5 +281,11 @@
       <endpoint address="https://webservice.aspsms.com/aspsmsx2.asmx" binding="customBinding" bindingConfiguration="ASPSMSX2Soap12" contract="ASPSMSX2.ASPSMSX2Soap" name="ASPSMSX2Soap12" />
     </client>
   </system.serviceModel>
+  <system.codedom>
+    <compilers>
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
+    </compilers>
+  </system.codedom>
   
 </configuration>
