--- a/MyCompany/Web.config
+++ b/MyCompany/Web.config
@@ -19,9 +19,9 @@
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
     
     <!--mjh: ASPSMS Settings for Auth stuff begin-->
-    <add key="SMSAccountIdentification" value="VNP3GEMHHF8S" />
-    <add key="SMSAccountPassword" value="p4$$w0rd" />
-    <add key="SMSAccountFrom" value="ListenFirst" />
+    <add key="SMSAccountIdentification" value="xxxxxxx" />
+    <add key="SMSAccountPassword" value="xxxxx" />
+    <add key="SMSAccountFrom" value="xxxxxxx" />
     <!--mjh: ASPSMS Settings for Auth stuff end-->
     
    
